# task4

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.c
cmake/: Testing.cmake
lib/: CMakeLists.txt
lib/include/passgen/: error.h  passgen.h
lib/src/: charset.c  charset.h  cli_lexer.c  cli_lexer.h  config_parser.c  config_parser.h  error.c  generator.c  generator.h  passgen.c  prob_math.c  prob_math.h
tests/: CMakeLists.txt
tests/charset_tests/: test_charset.c
tests/cli_tests/: test_cli.c
tests/config_tests/: test_config.c
tests/error_tests/: test_error.c
